# nixagent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  app.py  mcp.json  publish.sh  pyproject.toml  setup.py  test_stream_debug.py  test_stream_raw.py
docs/: ENTERPRISE_FEATURES.md  ENV_MANAGEMENT.md  MARKET_SOLUTIONS_VALUE_ADD.md  PUBLISHING_GUIDE.md  STREAMING.md
nixagent/: __init__.py  agent.py  graph.py  llm.py  logger.py  mcp.py  memory.py  retry.py  state.py
nixagent/integrations/: __init__.py  langchain_bridge.py
nixagent/providers/: __init__.py  anthropic.py  gemini.py  openai.py  qwen.py  vertex.py
nixagent/tools/: __init__.py  cmd.py  fs.py
skills/: .npmignore  SKILL.md  package.json
skills/examples/: test_04_mcp_usage.py  test_anthropic.py  test_gemini.py  test_vertex.py
skills/nixagent/: SKILL.md
skills/nixagent/examples/: test_04_mcp_usage.py  test_05_builtin_tools.py  test_06_cli_and_config.py  test_07_streaming.py  test_anthropic.py  test_gemini.py  test_vertex.py
tests/basic-examples/: test.py  test_04_mcp_usage.py  test_08_verbose_output.py  test_qwen.py
tests/docs/: 01_simple_usage.md
tests/enterprise/: test_e2e_enterprise.py  test_graph.py  test_langchain_bridge.py  test_memory.py  test_retry.py  test_state.py  test_structured_output.py
tests/enterprise-examples/: 01_structured_output.py  02_graph_routing.py  03_checkpointing.py  enterprise_showcase.py
